# supervisor

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMPLIANCE.md  LICENSE  NOTICE  README.md  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/bms-iot-app/: .dockerignore  .env.template  .env.test  BALENA_DEPLOYMENT.md  Dockerfile  INTEGRATION_COMPLETE.md  README.md  TESTING_CHECKLIST.md  alembic.ini  deploy-to-balena.sh  docker-compose.yml  docker-entrypoint.sh  emqxsl-ca.crt  example_multi_reader_usage.py  pyproject.toml
apps/bms-iot-app/migrations/: README.md  env.py
apps/bms-iot-app/migrations/versions/: dc3c962443cb_add_optional_bacnet_properties.py  f0a65dd2e313_add_remaining_tables_iot_device_status_.py  f249787e8106_initial_migration_with_all_tables.py
apps/bms-iot-app/src/: __init__.py  cli.py  main.py
apps/bms-iot-app/src/actors/: bacnet_monitoring_actor.py  bacnet_writer_actor.py  cleaner_actor.py  heartbeat_actor.py  mqtt_actor.py  system_metrics_actor.py  uploader_actor.py
apps/bms-iot-app/src/config/: bacnet_constants.py  config.py  deployment_runtime_config.py  paths.py  settings.py
apps/bms-iot-app/src/models/: bacnet_config.py  bacnet_reader_load_balancer.py  bacnet_types.py  bacnet_wrapper.py  bacnet_wrapper_manager.py  controller_points.py  deployment_config.py  device_status_enums.py  iot_device_status.py
apps/bms-iot-app/src/network/: credentials.py  mqtt_adapter.py  mqtt_client.py  mqtt_command_dispatcher.py  mqtt_config.py  rest_client.py  sqlmodel_client.py
apps/bms-iot-app/src/utils/: bacnet_health_processor.py  config_formatter.py  id_generator.py  logger.py  performance.py  performance_monitor.py  utils.py
apps/bms-iot-app/tests/: __init__.py  conftest.py  test_cli_mqtt_integration.py
apps/bms-iot-app/tests/fixtures/: __init__.py  actor_test_harness.py  actors.py  bacnet.py  mqtt.py
apps/bms-iot-app/tests/integration/: __init__.py  test_actor_system_setup.py  test_bacnet_actor_error_handling.py  test_bacnet_uploader_communication.py  test_complete_command_flows.py  test_connection_pool_timeout.py  test_error_handling_and_recovery.py  test_heartbeat_actor_error_handling.py  test_iot_device_status_production_patterns.py  test_message_routing.py  test_mqtt_actor_error_handling.py  test_mqtt_bacnet_communication.py  test_optional_properties_end_to_end.py  test_sqlite_concurrency.py  (+2 more)
apps/iot-supervisor-app/: install.sh  pyproject.toml
apps/iot-supervisor-app/src/: cli.py  main.py
apps/iot-supervisor-app/tests/: test_main.py
docs/: LICENSE.md  (+4 more)
(+253 files in other folders)
