[project]
name = "bms-iot-supervisor"
version = "0.1.0"
description = "BMS IoT Supervisor - FastAPI runtime for BMS execution on IoT devices"
authors = [
    {name = "BMS Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "BAC0==2025.06.10",
    "bacpypes>=0.19.0",
    "httpx==0.25.2",
    "paho-mqtt>=2.1.0",
    "pydantic==2.5.3",
    "rich>=14.0.0",
    "trio==0.30.0",
    "typer>=0.9.0",
    "sqlmodel>=0.0.8",
    "loguru==0.7.3"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
iot-supervisor-app = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
